--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "todoapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.23",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
-  }
+	"name": "todoapp",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next-auth/mongodb-adapter": "^1.1.0",
+		"@stitches/react": "^1.2.8",
+		"dayjs": "^1.11.5",
+		"mongodb": "^4.10.0",
+		"next": "12.3.1",
+		"next-auth": "^4.12.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.7.23",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"eslint": "8.24.0",
+		"eslint-config-next": "12.3.1",
+		"prettier": "^2.7.1",
+		"typescript": "4.8.4"
+	}
 }
