--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@next-auth/mongodb-adapter": "^1.1.0",
 		"@stitches/react": "^1.2.8",
+		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
 		"mongodb": "^4.10.0",
 		"next": "12.3.1",
