Added some base ui components

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	},
 	"dependencies": {
 		"@next-auth/mongodb-adapter": "^1.1.0",
+		"@radix-ui/colors": "^0.1.8",
+		"@radix-ui/react-checkbox": "^1.0.0",
+		"@radix-ui/react-context-menu": "^1.0.0",
 		"@stitches/react": "^1.2.8",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
