--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"baseUrl": "./src",
 		"paths": {
-			"@lib/*": ["./lib/*"]
+			"@lib/*": ["./lib/*"],
+			"@ui/*": ["./components/*"]
 		},
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
