--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"@next-auth/mongodb-adapter": "^1.1.0",
 		"@radix-ui/colors": "^0.1.8",
 		"@radix-ui/react-checkbox": "^1.0.0",
 		"@radix-ui/react-context-menu": "^1.0.0",
+		"@radix-ui/react-icons": "^1.1.1",
 		"@stitches/react": "^1.2.8",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
@@ -20,15 +22,22 @@
 		"next": "12.3.1",
 		"next-auth": "^4.12.2",
 		"react": "18.2.0",
+		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.23",
 		"@types/react": "18.0.21",
+		"@types/react-beautiful-dnd": "^13.1.2",
 		"@types/react-dom": "18.0.6",
 		"eslint": "8.24.0",
 		"eslint-config-next": "12.3.1",
+		"husky": ">=6",
+		"lint-staged": ">=10",
 		"prettier": "^2.7.1",
 		"typescript": "4.8.4"
+	},
+	"lint-staged": {
+		"*.{ts,tsx}": "prettier --write && eslint --cache --fix"
 	}
 }
