--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"typescript": "4.8.4"
 	},
 	"lint-staged": {
-		"*.{ts,tsx}": "prettier --write && eslint --cache --fix"
+		"*.{ts,tsx}": [
+			"prettier --write",
+			"eslint --cache --fix"
+		]
 	}
 }
