--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 		"mongodb": "^4.10.0",
 		"next": "12.3.1",
 		"next-auth": "^4.12.2",
+		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.23",
+		"@types/ramda": "^0.28.15",
 		"@types/react": "18.0.21",
 		"@types/react-beautiful-dnd": "^13.1.2",
 		"@types/react-dom": "18.0.6",
