--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"@radix-ui/colors": "^0.1.8",
 		"@radix-ui/react-checkbox": "^1.0.0",
 		"@radix-ui/react-context-menu": "^1.0.0",
+		"@radix-ui/react-dialog": "^1.0.0",
 		"@radix-ui/react-icons": "^1.1.1",
+		"@radix-ui/react-label": "^1.0.0",
+		"@radix-ui/react-select": "^1.0.0",
 		"@stitches/react": "^1.2.8",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.5",
