--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-beautiful-dnd": "^13.1.1",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"recoil": "^0.7.5"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.23",
