--- a/package.json
+++ b/package.json
@@ -1,52 +1,69 @@
 {
-	"name": "todoapp",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"prepare": "husky install"
-	},
-	"dependencies": {
-		"@next-auth/mongodb-adapter": "^1.1.0",
-		"@radix-ui/colors": "^0.1.8",
-		"@radix-ui/react-checkbox": "^1.0.0",
-		"@radix-ui/react-context-menu": "^1.0.0",
-		"@radix-ui/react-dialog": "^1.0.0",
-		"@radix-ui/react-icons": "^1.1.1",
-		"@radix-ui/react-label": "^1.0.0",
-		"@radix-ui/react-select": "^1.0.0",
-		"@stitches/react": "^1.2.8",
-		"axios": "^0.27.2",
-		"dayjs": "^1.11.5",
-		"mongodb": "^4.10.0",
-		"next": "12.3.1",
-		"next-auth": "^4.12.2",
-		"ramda": "^0.28.0",
-		"react": "18.2.0",
-		"react-beautiful-dnd": "^13.1.1",
-		"react-dom": "18.2.0",
-		"recoil": "^0.7.5"
-	},
-	"devDependencies": {
-		"@types/node": "18.7.23",
-		"@types/ramda": "^0.28.15",
-		"@types/react": "18.0.21",
-		"@types/react-beautiful-dnd": "^13.1.2",
-		"@types/react-dom": "18.0.6",
-		"eslint": "8.24.0",
-		"eslint-config-next": "12.3.1",
-		"husky": ">=6",
-		"lint-staged": ">=10",
-		"prettier": "^2.7.1",
-		"typescript": "4.8.4"
-	},
-	"lint-staged": {
-		"*.{ts,tsx}": [
-			"prettier --write",
-			"eslint --cache --fix"
-		]
-	}
+  "name": "todoapp",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --exit-zero-on-changes"
+  },
+  "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-context-menu": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-label": "^1.0.0",
+    "@radix-ui/react-select": "^1.0.0",
+    "@stitches/react": "^1.2.8",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "mongodb": "^4.10.0",
+    "next": "12.3.1",
+    "next-auth": "^4.12.2",
+    "ramda": "^0.28.0",
+    "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/node": "18.7.23",
+    "@types/ramda": "^0.28.15",
+    "@types/react": "18.0.21",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "18.0.6",
+    "babel-loader": "^8.2.5",
+    "chromatic": "^6.10.1",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "eslint-plugin-storybook": "^0.6.4",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "prettier": "^2.7.1",
+    "typescript": "4.8.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "todoapp@0.1.0"
 }
