Updated eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-	"extends": "next/core-web-vitals",
-	"rules": {
-		"no-unused-vars": "error"
-	}
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "no-unused-vars": "error"
+  },
+  "ignorePatterns": ["next.config.js", "*.d.ts"]
 }
