--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-select": "^1.0.0",
+    "@radix-ui/react-separator": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "mongodb": "^4.10.0",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
+    "nodemailer": "^6.8.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
