--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "^2.7.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.8.4"
   },
   "lint-staged": {
